# analysis-and-design-of-algorithms

./: LICENSE  README.md
exams/amortized analysis - practice/: document.tex  main.tex
exams/amortized analysis - practice/answers/problem5/: problem5.cpp
exams/asymptotic analysis - practice/: main.tex
exams/divide and conquer - practice/: CMakeLists.txt  document.tex  main.tex
exams/divide and conquer - practice/answers/problem1/: problem1.cpp  problem1.out
exams/divide and conquer - practice/answers/problem2/: problem2.cpp
exams/divide and conquer - practice/answers/problem3/: problem3.cpp  problem3.out
exams/divide and conquer - practice/answers/problem4/: problem4.cpp
exams/divide and conquer - practice/answers/problem5/: problem5.cpp
exams/dynamic programming 1 - practice/: document.tex  main.tex
exams/dynamic programming 1 - practice/answers/problem1/: problem1-1.cpp  problem1-2.cpp
exams/dynamic programming 1 - practice/answers/problem5/: problem5dc.cpp  problem5dp.cpp
exams/final practice 1/: main.tex
exams/final practice 2/: document.tex  main.tex
exams/linear programming/: document.tex  main.tex
exercises/c++/dynamic programming/: editdistance.cpp  maxsubarraysum.cpp  minimizingcoins.cpp  removingdigits.cpp  rodcutting.cpp
exercises/c++/dynamic programming 2/: lcs.cpp  lis2.cpp  rodcutting.cpp  varknapsack.cpp
projects/Partial project/src/: AlternativeDistanceTransform.h  Matrix.h  main.cpp  makefile
projects/partial project/src/: .gitignore  Distance.h  DistanceTransform.h  Skeleton.h
(+20 files in other folders)
