cmake_minimum_required(VERSION 3.17)
project(divide_and_conquer_practice_fabriziofranco)

set(CMAKE_CXX_STANDARD 14)

add_executable(p1 answers/problem1/problem1.cpp)
add_executable(p2 answers/problem2/problem2.cpp)
add_executable(p3 answers/problem3/problem3.cpp)
add_executable(p4 answers/problem4/problem4.cpp)
add_executable(p5 answers/problem5/problem5.cpp)
